added reference to eslint-config-m99coder to README.md, fixed repository property in package.json

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Marco Lehmann <m99coder@gmail.com> (http://m99.io/)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/m99coder/eslint-plugin-m99coder.git"
+    "url": "git+https://github.com/m99coder/eslint-plugin-m99coder.git"
   },
   "license": "MIT",
   "devDependencies": {
