--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "coveralls": "2.11.12",
+    "coveralls": "^3.0.6",
     "eslint": "3.1.1",
     "istanbul": "0.4.4",
-    "mocha": "2.5.3"
+    "mocha": "^6.2.0"
   },
   "engines": {
     "node": ">=4.0.0"
