--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "coveralls": "^3.0.6",
     "eslint": "3.1.1",
     "istanbul": "0.4.4",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "js-yaml": ">=3.13.1",
+    "underscore.string": ">=3.3.5"
   },
   "engines": {
     "node": ">=4.0.0"
