--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "acorn": ">=5.7.4",
     "coveralls": "^3.0.6",
-    "eslint": "4.18.2",
+    "eslint": "^6.8.0",
     "istanbul": "0.4.4",
-    "mocha": "^6.2.0",
     "js-yaml": ">=3.13.1",
+    "minimist": ">=1.2.3",
+    "mocha": "^7.1.2",
     "underscore.string": ">=3.3.5"
   },
   "engines": {
